﻿Version 1.4.0 - 

New Features:

- Added New Windows to Escape Chain.
- Default Names - You now have the option to set a Default Name for Buildings and Vehicles. You must rename the building/vehicle first, and then toggle the checkbox.
  If a building/vehicle has a default name, any building/vehicle of the same type will spawn/plop with that name. 
- Vehicle Manager - Vehicles now have a properties button allowing you to alter various values.
- Citizen Manager - Citizens now have a properties button. This currently allows you to view various statistics about the selected Citizen. These values apart from `Job Title` are for information only, and are not current editable.
- Custom Job Names - Citizens can now have Custom Job Names. From the new properties button, you can alter the `Job Title` field for a custom job name.

Developer Notes:

- Cleaned up source code. 
- Reorganized Folder Structure.


Version 1.3.1 - 

Bug Fixes:

- Fixed Issue with Properties Button not working on Specialized Industry Buildings.


Version 1.3.0 - 

Bug Fixes:

- Fixed Campus Buildings. The Property Window should now appear correctly with all campus buildings.
- Industry Barracks and Maintenance Buildings have had their Properties button restored after it mysteriously got lost.

New Features:

- Added Warehouse and Unique Factory Support. Property buttons can now be found on the respective building info panels. These buildings follow the same rules as other Industry Buildings if Rebalanced Industries is active. See Compatibility below.
- Added Escape Support - You can now close the menus with `Esc` however you must confirm any changes after you have made them by pressing enter when you have edited a value.

Version 1.2.0 - 

New Features: 

- Added Rebalanced Industries Compatibility Mode.