@@ -1,6 +1,19 @@
-﻿namespace CustomizeItExtended.Internal.Citizens
+﻿using System;
+
+namespace CustomizeItExtended.Internal.Citizens
 {
+    [Serializable]
     public class CitizenProperties
     {
+        public string CustomJobTitle;
+
+        public CitizenProperties()
+        {
+        }
+
+        public CitizenProperties(string title)
+        {
+            CustomJobTitle = title;
+        }
     }
 }
